--- a/lb2/MeineVagrantVM/Vagrantfile
+++ b/lb2/MeineVagrantVM/Vagrantfile
@@ -12,5 +12,15 @@ config.vm.provider "virtualbox" do |vb|
   apt-get install -y apache2
   sudo apt -y install apache2 php libapache2-mod-php
 
+  sudo apt install ufw
+  sudo ufw default deny incoming
+  sudo ufw default allow outgoing
+  sudo ufw allow ssh
+  sudo ufw allow 80
+  sudo ufw allow 8080
+  sudo ufw allow 'Apache'
+  sudo ufw --force enable
+  sudo ufw --force status verbose
+
   SHELL
 end
