--- a/lb3/docker-compose.yml
+++ b/lb3/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.1'
 
 services:
     php:
-        image: php:7.4-apache
+        build:
+            context: .
+            dockerfile: Dockerfile
         ports:
             - 80:80
         volumes:
@@ -12,7 +14,7 @@ services:
         command: --default-authentication-plugin=mysql_native_password
         restart: always
         environment:
-        MYSQL_ROOT_PASSWORD: example
+            MYSQL_ROOT_PASSWORD: example
 
     adminer:
         image: adminer
